Fixed overlapping classes in tabis code, fixed jps overlappings classes

--- a/cafeoui.css
+++ b/cafeoui.css
@@ -1,8 +1,4 @@
-body{
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-}
+
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap');
 
 .menu-container {
@@ -65,13 +61,13 @@ body{
   font-size: 1rem;
   font-weight: bold;
 }
-h1 {
+.h1-menu {
   color: #004b7a;
   font-size: 2.2rem;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
-ul {
+.ul-menu {
   list-style-type: disc;
   margin-left: 1.5rem;
   font-size: 1.2rem;
@@ -161,13 +157,13 @@ ul {
   text-align: left;
   gap: 2rem;
 }
-.section h1 {
+.h1-menu-2 {
   font-family: 'Dancing Script', cursive;
   font-size: 2.4rem;
   color: #7b2a22;
   margin-bottom: 0.6rem;
 }
-.section ul {
+.ul-menu-2 {
   list-style-type: disc;
   padding-left: 1.8rem;
   line-height: 1.7;
