--- a/cafeouiL.css
+++ b/cafeouiL.css
@@ -1,8 +1,4 @@
-body{
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-}
+
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap');
 
 .menu-container {
